--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+server/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Production build
+build/
+dist/
 
-# testing
-/coverage
+# Environment variables
+.env
+server/.env
 
-# production
-/build
+# IDE
+.vscode/
+.idea/
 
-# misc
+# OS files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Testing
+coverage/
+
+# Misc
+.eslintcache
