Implement SEO & LLM optimization strategy
- Add react-helmet-async for per-page meta tags (title, description, OG, Twitter, JSON-LD)
- Add react-snap for pre-rendering static HTML on all routes
- Create llms.txt for AI/LLM discoverability
- Create sitemap.xml and update robots.txt with sitemap reference
- Add FAQ page with FAQPage schema markup and accordion UI
- Add Google Search Console verification meta tag
- Fix heading hierarchy (h2 -> h1 on homepage hero)
- Remove duplicate JSON-LD schemas from index.html (now managed per-page via Helmet)
- Improve image alt texts with descriptive, keyword-rich content
- Fix manifest.json names from CRA defaults to brand name
- Add FAQ link to navigation across all pages
- Update copyright year to 2026

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Jesse A. Eisenbalm",
+  "name": "Jesse A. Eisenbalm - Premium Lip Balm",
   "icons": [
     {
       "src": "favicon.png",
