--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "stripe": "^19.1.0",
@@ -17,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,9 +40,14 @@
       "last 1 safari version"
     ]
   },
+  "reactSnap": {
+    "include": ["/", "/about", "/privacy-policy", "/faq"],
+    "skipThirdPartyRequests": true
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "react-snap": "^1.23.0",
     "tailwindcss": "^3.3.0"
   }
 }
