Fix build for Vercel: make react-snap non-blocking
Puppeteer/Chrome isn't available on Vercel's build servers.
Move react-snap to postbuild with fallback so build succeeds
even when Chrome is unavailable.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && react-snap",
+    "build": "react-scripts build",
+    "postbuild": "react-snap || echo 'react-snap skipped (no Chrome available)'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
