Add blog (Journal) feature with Supabase backend
- Blog API: GET /api/posts, GET /api/posts/:slug, POST /api/posts (API key protected)
- Supabase client + requireApiKey middleware + generateSlug util in server.js
- BlogPage.jsx: post listing with skeleton loading, tags, cover images
- BlogPost.jsx: single post with Article JSON-LD, 404 handling, dangerouslySetInnerHTML content
- AdminPage.jsx: password-gated admin UI for manual post creation
- App.jsx: routes for /blog, /blog/:slug, /admin
- package.json: /blog added to react-snap include

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     ]
   },
   "reactSnap": {
-    "include": ["/", "/about", "/privacy-policy", "/faq"],
+    "include": ["/", "/about", "/privacy-policy", "/faq", "/blog"],
     "skipThirdPartyRequests": true
   },
   "devDependencies": {
