--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "stripe": "^19.1.0"
   },
   "description": ""
