Add SPA catch-all rewrite for dynamic routes
Ensures /blog/:slug and other unmatched paths return index.html with
a 200 status instead of a 404. Without this, search engine bots
hitting individual post URLs directly would get a 404 and never index
them. Sitemap rule runs first (rewrites are first-match), so
/sitemap.xml still proxies to the server correctly. Pre-rendered
static files (/, /about, /blog, /faq, /privacy-policy) are served
directly by Vercel before rewrites are checked.

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/sitemap.xml",
       "destination": "https://jesse-eisenbalm-server.vercel.app/api/sitemap"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
