Add proper SPA fallback and indexing headers
- Add catch-all rewrite for client-side routes (excludes static assets)
- Add X-Robots-Tag header to ensure all pages are indexable
- Enable cleanUrls for SEO-friendly URLs
- Dynamic routes now return 200 instead of 404 for Googlebot

This fixes indexing for /blog/:slug and other client-side routes.
The catch-all excludes static/, images/, and file extensions to
avoid rewriting actual asset requests.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,25 @@
 {
   "trailingSlash": false,
+  "cleanUrls": true,
   "rewrites": [
     {
       "source": "/sitemap.xml",
       "destination": "https://jesse-eisenbalm-server.vercel.app/api/sitemap"
+    },
+    {
+      "source": "/((?!static|images|favicon|manifest|robots|llms|.*\\.(?:css|js|png|jpg|jpeg|gif|svg|ico|json|txt|xml|webmanifest)).*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Robots-Tag",
+          "value": "index, follow"
+        }
+      ]
     }
   ]
 }
