Fix 404 errors - use routes with filesystem handler
The complex regex pattern with negative lookahead is not supported by
Vercel's path-to-regexp. This caused all routes to 404.

Switched to legacy 'routes' syntax with 'handle: filesystem' which
explicitly tells Vercel to serve static files first, then fall back
to index.html for client-side routes. This is the recommended pattern
for SPAs per Vercel documentation.

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "trailingSlash": false,
-  "cleanUrls": true,
-  "rewrites": [
+  "routes": [
+    { "handle": "filesystem" },
     {
-      "source": "/sitemap.xml",
-      "destination": "https://jesse-eisenbalm-server.vercel.app/api/sitemap"
+      "src": "/sitemap.xml",
+      "dest": "https://jesse-eisenbalm-server.vercel.app/api/sitemap"
     },
     {
-      "source": "/((?!static|images|favicon|manifest|robots|llms|.*\\.(?:css|js|png|jpg|jpeg|gif|svg|ico|json|txt|xml|webmanifest)).*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "headers": [
