Use modern rewrites syntax instead of legacy routes
Can't mix routes with headers/trailingSlash. Using modern rewrites
with simple catch-all /(.*) instead. Vercel automatically serves
static files before applying rewrites, so this correctly handles:
- Static files (CSS/JS/images) served directly
- Sitemap proxied to server
- All other routes fall back to index.html for client-side routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
   "trailingSlash": false,
-  "routes": [
-    { "handle": "filesystem" },
+  "rewrites": [
     {
-      "src": "/sitemap.xml",
-      "dest": "https://jesse-eisenbalm-server.vercel.app/api/sitemap"
+      "source": "/sitemap.xml",
+      "destination": "https://jesse-eisenbalm-server.vercel.app/api/sitemap"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
