--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "node scripts/generate-sitemap.js",
     "build": "react-scripts build",
     "postbuild": "react-snap || echo 'react-snap skipped (no Chrome available)'",
     "test": "react-scripts test",
