--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,6 @@
   "trailingSlash": false,
   "rewrites": [
     {
-      "source": "/sitemap.xml",
-      "destination": "https://jesse-eisenbalm-server.vercel.app/api/sitemap"
-    },
-    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
@@ -17,6 +13,15 @@
         {
           "key": "X-Robots-Tag",
           "value": "index, follow"
+        }
+      ]
+    },
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, must-revalidate"
         }
       ]
     }
